force-app/main/default/objects/Settlement_Segment__c/Settlement_Segment__c.object-meta.xml
<CustomObject>
    <label>Settlement Segment</label>
    <nameField>
        <displayFormat>SEG-{000000}</displayFormat>
        <label>Settlement Segment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>