force-app/main/default/objects/Settlement_Segment__c/fields/Continues_From_Previous__c.field-meta.xml
<CustomField>
    <fullName>Continues_From_Previous__c</fullName>
    <formula>NOT(Is_First_Segment__c) &amp;&amp; ISBLANK(Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continues From Previous</label>
    <type>Checkbox</type>
</CustomField>