force-app/main/default/objects/Settlement_Segment__c/fields/Is_First_Segment__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Segment__c</fullName>
    <formula>Segment_Order__c = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is First Segment</label>
    <type>Checkbox</type>
</CustomField>