force-app/main/default/objects/Settlement_Segment__c/fields/Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Count__c</fullName>
    <label>Payment Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>