force-app/main/default/objects/Settlement_Segment__c/fields/Segment_Note__c.field-meta.xml
<CustomField>
    <fullName>Segment_Note__c</fullName>
    <label>Segment Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>