force-app/main/default/objects/Settlement_Segment__c/fields/Segment_Order__c.field-meta.xml
<CustomField>
    <fullName>Segment_Order__c</fullName>
    <label>Segment Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>