force-app/main/default/objects/Settlement_Segment__c/fields/Segment_Total__c.field-meta.xml
<CustomField>
    <fullName>Segment_Total__c</fullName>
    <formula>CASE(Segment_Type__c,
    &quot;Fixed&quot;,
      Payment_Amount__c * Payment_Count__c,
    &quot;Remainder&quot;,
      Payment_Amount__c * Calculated_Count__c,
    &quot;SolveAmount&quot;,
      Calculated_Amount__c * Payment_Count__c,
    0
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>