force-app/main/default/objects/Settlement_Segment__c/fields/Segment_Type__c.field-meta.xml
<CustomField>
    <fullName>Segment_Type__c</fullName>
    <label>Segment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Remainder</fullName>
            </value>
            <value>
                <fullName>SolveAmount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>