force-app/main/default/objects/Settlement_Segment__c/fields/Settlement_Plan__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Plan__c</fullName>
    <label>Settlement Plan</label>
    <referenceTo>Settlement_Plan_Draft__c</referenceTo>
    <relationshipLabel>Settlement Segments</relationshipLabel>
    <relationshipName>Settlement_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>